Plugin Directory: Avoid rating counts to bleed into open menu on small screens.
Props mapk.
See https://wordpress.slack.com/archives/meta/p1466873608000730, #1719.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@3575 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/css/style-rtl.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/css/style-rtl.css
@@ -2087,7 +2087,6 @@ p a:not(.button):hover {
   color: #999;
   font-size: 12.8px;
   font-size: 0.8rem;
-  position: relative;
   top: -1px;
 }
 
