--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/sass/site/primary/_plugin-index.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/sass/site/primary/_plugin-index.scss
@@ -62,7 +62,6 @@
 		.rating-count {
 			color: #999;
 			@include font-size( ms-unitless( ms(-2) ) );
-			position: relative;
 			top: -1px;
 		}
 	}
